--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Publicar aplicación
         run: |
           mkdir deploy
-          xcopy /E /I /Y /Q DemoApi\bin\Release\* deploy\
+          xcopy /E /I /Y /Q bin\Release\* deploy\
 
       - name: Transferir archivos a EC2
         uses: appleboy/scp-action@master
