--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Compilar la solución
         run: msbuild DemoApi.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=D:\a\DemoApi\DemoApi\bin\Release\
 
+      - name: Verificar archivos generados
+        run: dir DemoApi\bin\Release\
+
       - name: Publicar aplicación
         run: |
           mkdir deploy
