--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,16 @@ jobs:
           Copy-Item -Path "DemoApi\bin\Release\*" -Destination "deploy\" -Recurse -Force
 
       - name: Transferir archivos a EC2
-        uses: appleboy/scp-action@master
+        uses: win-acme/ssh-action@v1.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           password: ${{ secrets.EC2_PASSWORD }}
-          source: "deploy/*"
-          target: "C:/inetpub/wwwroot/DemoApi"
+          port: 22
+          command: |
+            mkdir -p C:/inetpub/wwwroot/DemoApi
+            cp -r deploy/* C:/inetpub/wwwroot/DemoApi/
+
 
       - name: Reiniciar IIS
         uses: appleboy/ssh-action@master
