--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,16 +30,11 @@ jobs:
           mkdir deploy
           Copy-Item -Path "DemoApi\bin\Release\*" -Destination "deploy\" -Recurse -Force
 
-      - name: Transferir archivos a EC2
-        uses: win-acme/ssh-action@v1.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          password: ${{ secrets.EC2_PASSWORD }}
-          port: 22
-          command: |
-            mkdir -p C:/inetpub/wwwroot/DemoApi
-            cp -r deploy/* C:/inetpub/wwwroot/DemoApi/
+          - name: Transferir archivos a EC2 usando SCP
+          shell: powershell
+          run: |
+            scp -o StrictHostKeyChecking=no -r deploy/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/C:/inetpub/wwwroot/DemoApi
+  
 
 
       - name: Reiniciar IIS
