--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Transferir archivos a EC2 usando SFTP
         shell: powershell
         run: |
-          $EC2_USER = "${{ secrets.EC2_USER }}"
+          $EC2_USER = "${{ secrets.EC2_USERNAME }}"
           $EC2_HOST = "${{ secrets.EC2_HOST }}"
           $EC2_PASSWORD = "${{ secrets.EC2_PASSWORD }}"
 
