--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,31 +25,22 @@ jobs:
       - name: Verificar archivos generados
         run: dir DemoApi\bin\Release\
 
-      - name: Publicar aplicación 
+      - name: Publicar aplicación
         run: |
           mkdir deploy
           Copy-Item -Path "DemoApi\bin\Release\*" -Destination "deploy\" -Recurse -Force
-          
-      - name: Configurar clave privada SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          echo "Clave configurada"
-          cat ~/.ssh/id_rsa # Para verificar que la clave se configuró correctamente
-          
+
       - name: Transferir archivos a EC2 usando SCP
         shell: powershell
         run: |
-          Write-Host "Usuario: ${{ secrets.EC2_USERNAME }}"
-          scp -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r deploy/* ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:/C:/inetpub/wwwroot/DemoApi
+          scp -o -v StrictHostKeyChecking=no -r deploy/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/C:/inetpub/wwwroot/DemoApi
+  
 
 
       - name: Reiniciar IIS
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
+          username: ${{ secrets.EC2_USER }}
           password: ${{ secrets.EC2_PASSWORD }}
           script: iisreset
- 
