--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,10 @@ jobs:
       - name: Transferir archivos a EC2 usando SCP
         shell: powershell
         run: |
-          scp -o "StrictHostKeyChecking=no" -r deploy/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/C:/inetpub/wwwroot/DemoApi
+          # Activar modo verbose para depuración
+          $ErrorActionPreference = "Stop"  # Asegura que se detenga en errores
+          scp -o "StrictHostKeyChecking=no" -v -r deploy/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/C:/inetpub/wwwroot/DemoApi
+
 
       - name: Reiniciar IIS
         uses: appleboy/ssh-action@master
