--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,11 @@ jobs:
       - name: Transferir archivos a S3
         run: |
           aws s3 cp deploy/ s3://demo-api-deploy --recursive
-
+          
+      - name: Descargar archivos desde S3 a EC2
+        run: |
+          aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive
+        shell: powershell
 
       - name: Reiniciar IIS
         uses: appleboy/ssh-action@master
