--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,7 @@ jobs:
           
       - name: Descargar archivos desde S3 a EC2
         run: |
-          aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive
-        
+          aws s3 cp s3://demo-api-deploy/ C:\Users\Administrator\Documents\prueba\ --recursive
 
       - name: Reiniciar IIS
         uses: appleboy/ssh-action@master
