--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,6 @@ jobs:
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region ${{ secrets.AWS_REGION }}
-      - name: Debug AWS CLI
-        run: |
-          aws s3 ls s3://demo-api-deploy/
 
       - name: Transferir archivos a S3
         run: |
@@ -45,4 +42,4 @@ jobs:
           
       - name: Descargar archivos desde S3 a EC2
         run: |
-          aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive
+          aws s3 cp s3://demo-api-deploy/ "C:/inetpub/wwwroot/DemoApi/" --recursive    
