--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,9 @@ jobs:
           
       - name: Descargar archivos desde S3 a EC2
         run: |
-          aws s3 cp s3://demo-api-deploy/ "C:/inetpub/wwwroot/DemoApi/" --recursive    
+          run: |
+          aws ssm send-command `
+            --instance-ids "tu-instance-id" `
+            --document-name "AWS-RunPowerShellScript" `
+            --parameters commands=["aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive"] `
+            --output text
