--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Listar contenido del directorio de publicación
         run: |
           Write-Host "Contenido del directorio de publicación:"
-          Get-ChildItem -Path "DemoApi\bin\Release\app.publish" -Recurse
+          Get-ChildItem -Path "DemoApi\obj\Release\Package\PackageTmp" -Recurse
 
       - name: Configurar AWS CLI
         run: |
@@ -41,7 +41,7 @@ jobs:
 
       - name: Transferir archivos a S3
         run: |
-          aws s3 cp "DemoApi\bin\Release\app.publish\" s3://demo-api-deploy --recursive
+          aws s3 cp "DemoApi\obj\Release\Package\PackageTmp" s3://demo-api-deploy --recursive
  
       - name: Ejecutar comando en EC2 vía SSM
         run: |
