--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,6 @@ jobs:
             /p:publishUrl="DemoApi\bin\Release\app.publish" `
             /p:PackageAsSingleFile=false
 
-      - name: Listar contenido del directorio de publicación
-        run: |
-          Write-Host "Contenido del directorio de publicación:"
-          Get-ChildItem -Path "DemoApi\obj\Release\Package\PackageTmp" -Recurse
-
       - name: Configurar AWS CLI
         run: |
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,7 +38,7 @@ jobs:
         run: |
           aws s3 cp "DemoApi\obj\Release\Package\PackageTmp" s3://demo-api-deploy --recursive
  
-      - name: Ejecutar comando en EC2 vía SSM
+      - name: Deploy de S3 a EC2
         run: |
           aws ssm send-command `
             --instance-ids "i-0e38624bf58cdf959" `
