--- a/.github/workflows/deploy-paralelo.yml
+++ b/.github/workflows/deploy-paralelo.yml
@@ -1,1 +1,62 @@
+name: Deploy .NET Framework to AWS EC2
+on:
+  push:
+    branches:
+      - master
 
+jobs:
+  build:
+    runs-on: windows-2019
+    outputs:
+      build_status: ${{ steps.build_step.outputs.status }}
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+      
+      - name: Configurar .NET Framework 4.8
+        uses: microsoft/setup-msbuild@v1
+      
+      - name: Restaurar paquetes NuGet
+        run: nuget restore DemoApi.sln
+      
+      - name: Publicar Web App
+        id: build_step
+        run: |
+          msbuild DemoApi.sln `
+            /p:Configuration=Release `
+            /p:Platform="Any CPU" `
+            /p:DeployOnBuild=true `
+            /p:WebPublishMethod=FileSystem `
+            /p:publishUrl="DemoApi\bin\Release\app.publish" `
+            /p:PackageAsSingleFile=false
+          echo "::set-output name=status::success"
+
+  prepare_aws:
+    runs-on: windows-2019
+    needs: build
+    steps:
+      - name: Configurar AWS CLI
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set default.region ${{ secrets.AWS_REGION }}
+
+  upload_to_s3:
+    runs-on: windows-2019
+    needs: [build, prepare_aws]
+    steps:
+      - name: Transferir archivos a S3
+        run: |
+          aws s3 cp "DemoApi\obj\Release\Package\PackageTmp" s3://demo-api-deploy --recursive
+
+  deploy_to_ec2:
+    runs-on: windows-2019
+    needs: [upload_to_s3]
+    steps:
+      - name: Deploy de S3 a EC2
+        run: |
+          aws ssm send-command `
+            --instance-ids ${{ secrets.EC2_INSTANCE_ID }} `
+            --document-name "AWS-RunPowerShellScript" `
+            --parameters commands=["aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive"] `
+            --output text
