--- a/.github/workflows/deploy-paralelo.yml
+++ b/.github/workflows/deploy-paralelo.yml
@@ -33,7 +33,6 @@ jobs:
 
   prepare_aws:
     runs-on: windows-2019
-    needs: build
     steps:
       - name: Configurar AWS CLI
         run: |
@@ -56,7 +55,7 @@ jobs:
       - name: Deploy de S3 a EC2
         run: |
           aws ssm send-command `
-            --instance-ids ${{ secrets.EC2_INSTANCE_ID }} `
+            --instance-ids "i-0e38624bf58cdf959" `
             --document-name "AWS-RunPowerShellScript" `
             --parameters commands=["aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive"] `
             --output text
