--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Deploy de S3 a EC2
         run: |
           aws ssm send-command `
-            --instance-ids "i-0e38624bf58cdf959" `
+            --instance-ids ${{ secrets.EC2_INSTANCE_ID }} `
             --document-name "AWS-RunPowerShellScript" `
             --parameters commands=["aws s3 cp s3://demo-api-deploy/ C:\inetpub\wwwroot\DemoApi\ --recursive"] `
             --output text
