--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy .NET Framework to AWS EC2
 on:
   push:
     branches:
-      - main
-      #-master
+      #- main
+      -master
 jobs:
   build:
     runs-on: windows-2019
