--- a/.github/workflows/deploy v2.yml
+++ b/.github/workflows/deploy v2.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+
 jobs:
   build:
     runs-on: windows-2019
@@ -36,7 +37,9 @@ jobs:
       - name: Finalizar análisis con SonarCloud
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        run: |
+          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          if ($LASTEXITCODE -ne 0) { exit 1 }
 
       - name: Publicar Web App
         run: |
