--- a/.github/workflows/deploy - ASG.yml
+++ b/.github/workflows/deploy - ASG.yml
@@ -44,7 +44,8 @@ jobs:
        
       - name: Desplegar con CodeDeploy
         run: |
-          aws deploy create-deployment `
+          DEPLOYMENT_ID=$(aws deploy create-deployment `
             --application-name DemoApiApp `
             --deployment-group-name DemoApiDeploymentGroup `
-            --s3-location bucket=demo-api-deploy,key=deploy.zip,bundleType=zip
+            --s3-location bucket=demo-api-deploy,key=deploy.zip,bundleType=zip)
+            echo "DEPLOYMENT_ID=$DEPLOYMENT_ID"
