--- a/.github/workflows/deploy - EC2 - CodeDeploy.yml
+++ b/.github/workflows/deploy - EC2 - CodeDeploy.yml
@@ -19,6 +19,32 @@ jobs:
       - name: Restaurar paquetes NuGet
         run: nuget restore DemoApi.sln
 
+      - name: Instalar SonarScanner para .NET
+        run: dotnet tool install --global dotnet-sonarscanner
+
+      - name: Iniciar análisis con SonarCloud
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          dotnet sonarscanner begin /k:"carlospineda2006_DemoApi" `
+            /o:"carlospineda2006" `
+            /d:sonar.host.url="https://sonarcloud.io" `
+            /d:sonar.login="${{ secrets.SONAR_TOKEN }}" `
+            /d:sonar.cs.opencover.reportsPaths="DemoApi.Tests\coverage.opencover.xml"
+
+      - name: Compilar solución
+        run: msbuild DemoApi.sln /p:Configuration=Release /p:Platform="Any CPU"
+
+      - name: Finalizar análisis con SonarCloud
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          if ($LASTEXITCODE -ne 0) {
+            echo "❌ Error: SonarCloud detectó problemas en el código. Corrige los errores antes de continuar."
+            exit 1
+          }
+      
       - name: Publicar Web App
         run: |
           msbuild DemoApi.sln `
